--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.2",
+    "coingecko-api": "^1.0.10",
     "ejs": "^3.1.6",
     "express": "^4.17.3"
   }
